# stm32cubeprogrammer-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  justfile
.github/workflows/: rust.yml
stm32cubeprogrammer/: Cargo.toml  README.md
stm32cubeprogrammer-cli/: Cargo.toml  README.md
stm32cubeprogrammer-cli/src/: display_handler.rs  main.rs  output.rs  parse.rs
stm32cubeprogrammer-cli/tests/: basic.rs
stm32cubeprogrammer-sys/: Cargo.toml  README.md  STM32CubeProgrammer_API.chm  build.rs  justfile
stm32cubeprogrammer-sys/include/: CubeProgrammer_API_Undocumented.h  wrapper.h
stm32cubeprogrammer-sys/src/: bindings_linux.rs  bindings_unix.rs  bindings_windows.rs  lib.rs
stm32cubeprogrammer/src/: api.rs  api_log.rs  api_types.rs  cube_programmer.rs  display.rs  error.rs  lib.rs  utility.rs
stm32cubeprogrammer/tests/: basic.rs  download_file.rs  fus.rs  read_and_write_core_register.rs  read_and_write_memory.rs  test_common.rs
