[package]
name = "stm32cubeprogrammer-cli"
version = "0.1.0"
edition = "2021"

authors = ["Christian Krenslehner <ckrenslehner@gmail.com>"]
description = "CLI for the STM32CubeProgrammer API"
license = "MIT"
repository = "https://github.com/ckrenslehner/stm32cubeprogrammer-rs"
keywords = ["stm32", "cube", "programmer", "cli"]
categories = ["command-line-utilities"]

[dependencies]
bpaf = { version = "0.9", features = ["derive"] }
env_logger = "0.11.5"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
stm32cubeprogrammer = { version = "0.1.0", features = ["serde", "validations"] }
dotenvy.workspace = true
log.workspace = true
anyhow = "1.0.94"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-log.workspace = true
dotenvy.workspace = true
