[package]
name = "stm32cubeprogrammer-sys"
version = "0.1.0"
edition = "2021"

authors = ["Christian Krenslehner"]
description = "Rust bindings for the STM32CubeProgrammer API"
license = "MIT"
repository = "https://github.com/ckrenslehner/stm32cubeprogrammer-rs"

[dependencies]
libloading = "0.8.6"

[build-dependencies]
bindgen = "0.70.1"
