[package]
name = "stm32cubeprogrammer"
version = "0.1.0"
edition = "2021"

[dependencies]
stm32cubeprogrammer-sys = { path = "../stm32cubeprogrammer-sys" }
derive_more = { version = "1", features = [
    "from",
    "deref",
    "error",
    "display",
    "into",
] }
log.workspace = true
widestring = "1.1.0"
num_enum = "0.7.3"
bytemuck = "1.20.0"
strum = { version = "0.26.3", features = ["derive"] }
lazy_static = "1.5.0"
bon = "3.2.0"

[dev-dependencies]
dotenvy.workspace = true
test-log.workspace = true
